# fizzbuzz

./: .gitignore  README.md  pyproject.toml  readme.md
source/: fizzbuzz.py  fizzbuzz_simple.py
src/: fizzbuzz_tdd.py
tests/TDD/: test_fizzbuzz_tdd.py
tests/features/: fizzbuzz.feature
tests/step_defs/: test_fizzbuzz.py  test_fizzbuzz_pythonic.py
