[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["alexbarten"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-bdd = "^4.0.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
