[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = "BDD, TDD and 'just build' interpretations of the fizzbuzz test in Python"
authors = ["alexbarten"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-bdd = "^4.0.1"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
